# 0.0.30 (unreleased)
- add unary negation to rle/rledict
- add apply, apply_values and apply_runs to rle/rledict
- add iter to rledict to for loop through keys/values
- subsetting an RLE with a dataframe now returns a dataframe
- printing rles respects terminal width
- add copy() to rledict
- add shift to rle/rledict

# 0).0.29 (21.01.19)
- try to fix bug when subsetting with pyranges

# 0.0.28 (17.01.19)
- improve speed when subsetting with pyranges

# 0.0.27 (10.01.19)
- better api for subsetting rles with dfs

# 0.0.26 (07.01.19)
- better api for subsetting with pyranges

# 0.0.25 (24.10.19)
- allow creating pyrle from values only (thanks Alistair Miles)

# 0.0.23 (09.05.19)
- remove pyranges dependency